# MCP-for-Hiring

./: README.md  candidate_matcher.yaml  main.py  profiles.py  pyproject.toml  requirements.txt
candidate_service/: main.py  requirements.txt
candidate_service/db/: p1.json  p2.json
client/: package.json  pnpm-lock.yaml
client/app/: layout.tsx  page.tsx
client/app/candidate/: types.ts
client/app/candidate/[id]/: page.tsx
client/components/profile/: CertificationsList.tsx  CompanyCard.tsx  ContactFooter.tsx  EducationCards.tsx  ExperienceTimeline.tsx  LanguagesGrid.tsx  PersonalitySection.tsx  ProfileHeader.tsx  SkillsCloud.tsx  SummaryTabs.tsx  VolunteeringCards.tsx
client/db/: p1.json
db/: p1.json  p2.json
email_service/: main.py  requirements.txt
tailor_message_service/: main.py  requirements.txt
tools/: find_candidate.py  send_email.py  tailor_message.py
